apps/common/unifi-controller/unifi-stack.yaml
---
# Source: unifi/templates/common.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi
  labels:
    app.kubernetes.io/instance: unifi
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: unifi
    app.kubernetes.io/version: v7.1.68
    helm.sh/chart: unifi-5.1.2
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: unifi
      app.kubernetes.io/instance: unifi
  template:
    metadata:
      labels:
        app.kubernetes.io/name: unifi
        app.kubernetes.io/instance: unifi
    spec:
      
      serviceAccountName: default
      automountServiceAccountToken: true
      securityContext:
        fsGroup: 999
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: unifi
          image: "nexusforge/unifi-docker:v8.0.24"
          imagePullPolicy: IfNotPresent
          ports:
            - name: controller
              containerPort: 8080
              protocol: TCP
            - name: discovery
              containerPort: 10001
              protocol: UDP
            - name: http
              containerPort: 8443
              protocol: TCP
            - name: speedtest
              containerPort: 6789
              protocol: TCP
            - name: stun
              containerPort: 3478
              protocol: UDP
            - name: syslog
              containerPort: 5514
              protocol: UDP
          volumeMounts:
            - name: data
              mountPath: /unifi
          livenessProbe:
            tcpSocket:
              port: 8443
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8443
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 8443
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
          resources:
            limits:
              cpu: 512m
              memory: 2048Mi
            requests:
              cpu: 150m
              memory: 1024Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: unifi-data
