apps/common/unifi-controller/unifi-services.yaml
# Source: manual NOT helm.
# Required since single service LoadBalancer's cannot have multi protocol.
apiVersion: v1
kind: Service
metadata:
  name: unifi-tcp
  labels:
    app.kubernetes.io/name: unifi
    app.kubernetes.io/instance: unifi
  annotations:
    metallb.universe.tf/allow-shared-ip: "unifi-controller"
spec:
  type: LoadBalancer
  loadBalancerIP: "${unifi_ip}"
  externalTrafficPolicy: Local
  ports:
  - port: 8080
    targetPort: controller
    protocol: TCP
    name: controller
  - port: 8443
    targetPort: http
    protocol: TCP
    name: http
  - port: 6789
    targetPort: speedtest
    protocol: TCP
    name: speedtest
  - port: 27017 # MongoDB default port
    targetPort: 27017
    name: mongodb
  selector:
    app.kubernetes.io/name: unifi
    app.kubernetes.io/instance: unifi
---
# Source: manual NOT helm.
# Required since single service LoadBalancer's cannot have multi protocol.
apiVersion: v1
kind: Service
metadata:
  name: unifi-udp
  labels:
    app.kubernetes.io/name: unifi
    app.kubernetes.io/instance: unifi
  annotations:
    metallb.universe.tf/allow-shared-ip: "unifi-controller"
spec:
  type: LoadBalancer
  loadBalancerIP: "${unifi_ip}"
  externalTrafficPolicy: Local
  ports:
  - port: 10001
    targetPort: discovery
    protocol: UDP
    name: discovery
  - port: 3478
    targetPort: stun
    protocol: UDP
    name: stun
  - port: 5514
    targetPort: syslog
    protocol: UDP
    name: syslog
  selector:
    app.kubernetes.io/name: unifi
    app.kubernetes.io/instance: unifi
